make nextflow somewhat instrumentable